--- a/Número secreto/index.html
+++ b/Número secreto/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Acerte o número</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Você <span>acertou!</span></h1>
-    <h2>Você descobriu o número secreto</h2>
+    <h1 class="va">Você <span>acertou!!!</span></h1>
+    <h2 class="vd">Você descobriu o número secreto</h2>
 
-    <img src="Robo.jfif" alt="Imagem de robo">
+    <img class="robo" src="Robo.jfif" alt="Imagem de robo">
     <script src="app.js"></script>
 </body>
 </html>
